tests/tests_p1/pass/prof/46ok.min
program
  number x := 3
start
  2^x!
end
