tests/tests_p1/fail/prof/23noret.min
program
	function void bigger number x; number y do
		if x > y then
			x!
			return y
		fi
		y!
start
	bigger(2,3);
end
